Bug 474099 - kscreen doesn't save config when upower is not installed
Summary: kscreen doesn't save config when upower is not installed
Status: RESOLVED FIXED
Alias: None
Product: KScreen
Classification: Plasma
Component: common (other bugs)
Version First Reported In: 5.27.7
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kscreen-bugs-null@kde.org
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-09-03 15:44 UTC by Ian Pilcher
Modified: 2023-09-06 15:21 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ian Pilcher 2023-09-03 15:44:54 UTC
STEPS TO REPRODUCE

1. Uninstall upower
2. Log out of Plasma
3. Remove any existing kscreen configuration in ~/.local/share/kscreen
4. Log in to Plasma

OBSERVED RESULT

kscreen configuration is not written to ~/.local/share/kscreen.  Any changes to the configuration are lost when logging out.


EXPECTED RESULT

Configuration should be saved to ~/.local/share/kscreen.


SOFTWARE/OS VERSIONS
Windows: N/A
macOS: N/A
Linux/KDE Plasma: Fedora 38 (kernel 6.4.12)
(available in About System)
KDE Plasma Version: 5.27.7
KDE Frameworks Version: 5.109.0
Qt Version: 5.15.10

ADDITIONAL INFORMATION

A similar issue is described here.

  https://rainerkeller.de/2018-KDE-does-not-load-screen-settings.html

The patch from that blog post appears to fix this issue as well.
Comment 1 Bug Janitor Service 2023-09-03 16:35:37 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kscreen/-/merge_requests/230
Comment 2 Nicolas Fella 2023-09-06 14:55:05 UTC
Git commit 68645853c0e12c4afb6928897d73b605c83ac788 by Nicolas Fella, on behalf of Ian Pilcher.
Committed on 06/09/2023 at 16:52.
Pushed by nicolasfella into branch 'master'.

kded/device: Write configuration when UPower is not available

Without this commit, kscreen does not write (or read?) its configuration
in ~/.local/share/kscreen if the UPower API is not available.

See https://rainerkeller.de/2018-KDE-does-not-load-screen-settings.html

M  +1    -0    kded/device.cpp

https://invent.kde.org/plasma/kscreen/-/commit/68645853c0e12c4afb6928897d73b605c83ac788
Comment 3 Nicolas Fella 2023-09-06 15:21:55 UTC
Git commit 40849e570a001deb2d59d6c02a452a50cdb9660e by Nicolas Fella, on behalf of Ian Pilcher.
Committed on 06/09/2023 at 16:55.
Pushed by nicolasfella into branch 'Plasma/5.27'.

kded/device: Write configuration when UPower is not available

Without this commit, kscreen does not write (or read?) its configuration
in ~/.local/share/kscreen if the UPower API is not available.

See https://rainerkeller.de/2018-KDE-does-not-load-screen-settings.html
(cherry picked from commit 68645853c0e12c4afb6928897d73b605c83ac788)

M  +1    -0    kded/device.cpp

https://invent.kde.org/plasma/kscreen/-/commit/40849e570a001deb2d59d6c02a452a50cdb9660e