kded/device: Write configuration when UPower is not available

Without this commit, kscreen does not write (or read?) its configuration
in ~/.local/share/kscreen if the UPower API is not available.

See https://rainerkeller.de/2018-KDE-does-not-load-screen-settings.html

BUG: 474099